# tools

./: README.md
experiments/: if_struct.c  intcompare.c  strstr.c  virt1_intcomp.c  virt2_if_struct.c  virt_direct_intcompare.c  virt_if_struct.c  virt_indirect_intcompare.c  virt_linear_intcompare.c  virt_switch_intcompare.c
src/cfg-reconstruction/: CMakeLists.txt
src/cfg-reconstruction/src/: export.h  main.cpp  trace.proto
src/cfg-reconstruction/src/graph/: graph.cpp
src/cfg-reconstruction/src/loader/: loader.cpp
src/cfg-reconstruction/src/type/: instruction.cpp  instruction.h  instruction.h.autosave  trace.h  trace.pb.cc  trace.pb.h
src/cfgrecon/: CMakeLists.txt
src/cfgrecon/src/: export.h  main.cpp
src/cfgrecon/src/graph/: examiner.cpp  graph.cpp  movf.cpp
src/cfgrecon/src/loader/: loader.cpp
src/cfgrecon/src/type/: instruction.cpp  instruction.h  trace.h
src/engine/: traceExpDirectAnalysis.ml
src/trace-pin/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.3-pre1  README  TODO  trace_old.proto
src/trace-pin/src/: main.cpp  parsing_helper.h
src/trace-pin/src/lib/cap/: cap.h  parser.cpp  trace.h  tracer.cpp
src/trace-pin/src/lib/type/: instruction.cpp  trace.pb.cc  trace.pb.h
